svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    run: hello-ako
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
